# modelgate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: openai.md
src/modelgate/: __init__.py  client.py  errors.py  types.py
src/modelgate/providers/: anthropic.py  base.py  bedrock.py  gemini.py  generic_openai.py  vertex.py
src/unifai/: __init__.py  client.py  errors.py  types.py
src/unifai/providers/: __init__.py  anthropic.py  base.py  bedrock.py  gemini.py  generic_openai.py  openai.py  vertex.py
tests/: test_anthropic_adapter.py  test_bedrock_adapter.py  test_gemini_adapter.py  test_openai_adapter.py  test_openai_adapter_unit.py  test_types.py
